2020-7-23,新增:電商平台業績-上海#15-20200722-0002

--- a/App_GlobalResources/resPublic.zh-CN.resx
+++ b/App_GlobalResources/resPublic.zh-CN.resx
@@ -135,6 +135,9 @@
   <data name="error_oops" xml:space="preserve">
     <value>Oops..发生了一点小故障</value>
   </data>
+  <data name="fun_上海電商平台業績" xml:space="preserve">
+    <value>上海電商平台業績</value>
+  </data>
   <data name="fun_客訴管理" xml:space="preserve">
     <value>客诉管理</value>
   </data>
