--- a/App_GlobalResources/resPublic.resx
+++ b/App_GlobalResources/resPublic.resx
@@ -135,6 +135,9 @@
   <data name="error_oops" xml:space="preserve">
     <value>Oops..發生了一點小故障</value>
   </data>
+  <data name="fun_上海電商平台業績" xml:space="preserve">
+    <value>上海電商平台業績</value>
+  </data>
   <data name="fun_客訴管理" xml:space="preserve">
     <value>客訴管理</value>
   </data>
